# the-quizzler

./: README.md
app/: App.tsx  layout.tsx
backend/: pyproject.toml  run.sh
backend/app/: __init__.py  attachment_store.py  config.py  file_store.py  main.py  memory_store.py  quiz_agent.py  quiz_store.py  server.py  thread_item_converter.py
backend/app/widgets/: __init__.py  quiz_taker.widget  quiz_widget.py
backend/quiz_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: ChatKitPanel.tsx
lib/: config.ts
